# kachaka-api-rust

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: get_latest_info.rs  get_system_info.rs  shelf_location_resolution.rs  simple_speak.rs  watch_camera_image.rs  watch_compressed_camera_image.rs  watch_error.rs  watch_update.rs
src/: api_impl.rs  conversion.rs  lib.rs  options.rs  shelf_location_resolver.rs  types.rs
