[package]
name = "kachaka-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
serde_json = "1.0.134"
image = "0.25.5"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
minifb = "0.27.0"
