[package]
name = "kachaka-api"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust API client library for Kachaka Robot"
license = "MIT"
repository = "https://github.com/hirtanak/kachaka-api-rust"
keywords = ["robotics", "kachaka", "grpc", "api-client"]
categories = ["api-bindings", "robotics"]

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
serde_json = "1.0.134"
image = "0.25.5"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
minifb = "0.27.0"
